--- a/creatures-hunting-angular/src/app/manager/area-create/area-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/area-create/area-create.component.html
@@ -16,7 +16,7 @@
     </mat-form-field>
   </div>
 
-  <button mat-raised-button color="primary" routerLink="/areas">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/areas">Back</button>
   <button mat-raised-button color="primary" (click)="createArea(name.value, areaType)">Create</button>
 
 
