--- a/creatures-hunting-angular/src/app/manager/manager.component.html
+++ b/creatures-hunting-angular/src/app/manager/manager.component.html
@@ -5,11 +5,11 @@
     <span class="spacer"></span>
 
     <div>
-      <button mat-button routerLink="">Home</button>
-      <button mat-button routerLink="/users" *ngIf="cookieIsAdmin">Users</button>
-      <button mat-button routerLink="/monsters">Monsters</button>
-      <button mat-button routerLink="/weapons">Weapons</button>
-      <button mat-button routerLink="/areas">Areas</button>
+      <button mat-button routerLink="/pa165">Home</button>
+      <button mat-button routerLink="/pa165/users" *ngIf="cookieIsAdmin">Users</button>
+      <button mat-button routerLink="/pa165/monsters">Monsters</button>
+      <button mat-button routerLink="/pa165/weapons">Weapons</button>
+      <button mat-button routerLink="/pa165/areas">Areas</button>
     </div>
     <button class="logout" mat-button (click)="logout()">Logout</button>
   </mat-toolbar-row>
