--- a/creatures-hunting-angular/src/app/manager/monster-create/monster-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/monster-create/monster-create.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <button mat-raised-button color="primary" routerLink="/monsters">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/monsters">Back</button>
   <button mat-raised-button color="primary" (click)="createMonster(name.value, height.value, weight.value, agility)">Create monster</button>
 
 </mat-card>
