--- a/creatures-hunting-angular/src/app/manager/weapon-create/weapon-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/weapon-create/weapon-create.component.html
@@ -27,7 +27,7 @@
     </mat-form-field>
   </div>
 
-  <button mat-raised-button color="primary" routerLink="/weapons">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/weapons">Back</button>
   <button mat-raised-button color="primary" (click)="createWeapon(name.value, type, range.value,magazineCapacity.value)">Create</button>
 
 
