--- a/creatures-hunting-angular/src/app/error404/error404.component.html
+++ b/creatures-hunting-angular/src/app/error404/error404.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="centerWrapper">
   <div class="center">
-    <button mat-fab color="primary" routerLink="/"><mat-icon>home</mat-icon> </button>
+    <button mat-fab color="primary" routerLink="/pa165"><mat-icon>home</mat-icon> </button>
   </div>
 </div>
 
