--- a/creatures-hunting-angular/src/app/manager/area-detail/area-detail.component.html
+++ b/creatures-hunting-angular/src/app/manager/area-detail/area-detail.component.html
@@ -1,7 +1,7 @@
 <mat-spinner [style.display]="!(showArea)  ? 'block' : 'none'" class="center"></mat-spinner>
 
 <mat-card class="main-card mat-elevation-z4" *ngIf="showArea" >
-  <button mat-raised-button color="primary" routerLink="/areas" class="backButton">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/areas" class="backButton">Back</button>
 
   <div>
     <div>
@@ -22,10 +22,10 @@
     </div>
 
     <button *ngIf="isAdmin" mat-raised-button color="primary" (click)="updateArea(name.value, areaType)">Update</button>
-    <button mat-raised-button color="primary" (click)="showMonsters()">Add monster to Area</button>
+    <button mat-raised-button color="primary" (click)="showMonsters()">Add spotted monster</button>
 
 
-    <h4>This area contains:</h4>
+    <h4>Monsters spotted in this area:</h4>
     <mat-table [dataSource]="dataSource" >
       <!-- Position Column -->
       <ng-container matColumnDef="id">
