--- a/creatures-hunting-angular/src/app/manager/areas/areas.component.html
+++ b/creatures-hunting-angular/src/app/manager/areas/areas.component.html
@@ -1,9 +1,9 @@
 <mat-spinner [style.display]="!showAreas ? 'block' : 'none'" class="center"></mat-spinner>
 
 <mat-card class="main-card mat-elevation-z4">
-  <h4>All weapons</h4>
-  <button mat-raised-button color="primary" routerLink="">Back</button>
-  <button mat-raised-button color="primary" routerLink="/create/area" *ngIf="isAdmin">Create new area</button>
+  <h4>All areas</h4>
+  <button mat-raised-button color="primary" routerLink="/pa165">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/create/area" *ngIf="isAdmin">Create new area</button>
   <mat-table #table [dataSource]="dataSource" *ngIf="showAreas">
 
     <ng-container matColumnDef="id">
