--- a/creatures-hunting-angular/src/app/manager/monster-detail/monster-detail.component.html
+++ b/creatures-hunting-angular/src/app/manager/monster-detail/monster-detail.component.html
@@ -1,7 +1,7 @@
 <mat-spinner [style.display]="!showMonster ? 'block' : 'none'" class="center"></mat-spinner>
 
 <mat-card class="main-card mat-elevation-z4" *ngIf="showMonster">
-  <button mat-raised-button color="primary" routerLink="/monsters" class="backButton">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/monsters" class="backButton">Back</button>
   <div>
     <div>
       <mat-form-field>
