--- a/creatures-hunting-angular/src/app/manager/monsters/monsters.component.html
+++ b/creatures-hunting-angular/src/app/manager/monsters/monsters.component.html
@@ -2,8 +2,8 @@
 
 <mat-card class="main-card mat-elevation-z4">
   <h4>All monsters</h4>
-  <button mat-raised-button color="primary" routerLink="">Back</button>
-  <button mat-raised-button color="primary" routerLink="/create/monster" *ngIf="isAdmin">Create new monster</button>
+  <button mat-raised-button color="primary" routerLink="/pa165">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/create/monster" *ngIf="isAdmin">Create new monster</button>
   <mat-table #table [dataSource]="dataSource" *ngIf="showMonsters">
     <!-- Position Column -->
     <ng-container matColumnDef="id">
