--- a/creatures-hunting-angular/src/app/manager/user-create/user-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/user-create/user-create.component.html
@@ -12,7 +12,7 @@
           First name is required!
         </mat-error>
       </mat-form-field>
-      <button mat-raised-button color="primary" routerLink="/users" class="previousButtons">Cancel</button>
+      <button mat-raised-button color="primary" routerLink="/pa165/users" class="previousButtons">Cancel</button>
       <button mat-raised-button color="primary" matStepperNext>Next</button>
     </form>
   </mat-step>
