--- a/creatures-hunting-angular/src/app/manager/weapon-detail/weapon-detail.component.html
+++ b/creatures-hunting-angular/src/app/manager/weapon-detail/weapon-detail.component.html
@@ -1,7 +1,7 @@
 <mat-spinner [style.display]="!(showWeapon)  ? 'block' : 'none'" class="center"></mat-spinner>
 
 <mat-card class="main-card mat-elevation-z4" *ngIf="showWeapon" >
-  <button mat-raised-button color="primary" routerLink="/weapons" class="backButton">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/weapons" class="backButton">Back</button>
 
   <div>
     <div>
