--- a/creatures-hunting-angular/src/app/manager/weapons/weapons.component.html
+++ b/creatures-hunting-angular/src/app/manager/weapons/weapons.component.html
@@ -2,8 +2,8 @@
 
 <mat-card class="main-card mat-elevation-z4">
   <h4>All weapons</h4>
-  <button mat-raised-button color="primary" routerLink="">Back</button>
-  <button mat-raised-button color="primary" routerLink="/create/weapon" *ngIf="isAdmin">Create new weapon</button>
+  <button mat-raised-button color="primary" routerLink="/pa165">Back</button>
+  <button mat-raised-button color="primary" routerLink="/pa165/create/weapon" *ngIf="isAdmin">Create new weapon</button>
   <mat-table #table [dataSource]="dataSource" *ngIf="showWeapons">
 
     <ng-container matColumnDef="id">
