--- a/creatures-hunting-angular/src/app/manager/area-create/area-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/area-create/area-create.component.html
@@ -1,7 +1,13 @@
 <mat-card class="main-card mat-elevation-z4" >
   <div>
     <mat-form-field>
-      <input matInput #name  placeholder="Name" >
+      <input matInput #name  placeholder="Name" required pattern="^[a-zA-Z]+$" [formControl]="nameFormControl">
+      <mat-error *ngIf="nameFormControl.hasError('pattern') && !nameFormControl.hasError('required')">
+        This is not valid name!
+      </mat-error>
+      <mat-error *ngIf="nameFormControl.hasError('required')">
+        Name is required!
+      </mat-error>
     </mat-form-field>
   </div>
   <div>
@@ -17,7 +23,8 @@
   </div>
 
   <button mat-raised-button color="primary" routerLink="/pa165/areas">Back</button>
-  <button mat-raised-button color="primary" (click)="createArea(name.value, areaType)">Create</button>
+  <button mat-raised-button color="primary" [disabled]="!nameFormControl.valid"
+          (click)="createArea(name.value, areaType)">Create</button>
 
 
 </mat-card>
