--- a/creatures-hunting-angular/src/app/manager/monster-create/monster-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/monster-create/monster-create.component.html
@@ -2,17 +2,29 @@
   <div>
     <div>
       <mat-form-field>
-        <input matInput #name placeholder="Name" c>
+        <input matInput #name placeholder="Name" required pattern="^[a-zA-Z]+$" [formControl]="nameFormControl">
+        <mat-error *ngIf="nameFormControl.hasError('pattern') && !nameFormControl.hasError('required')">
+          This is not valid name!
+        </mat-error>
+        <mat-error *ngIf="nameFormControl.hasError('required')">
+          Name is required!
+        </mat-error>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
-        <input matInput #height placeholder="Height" >
+        <input matInput #height placeholder="Height" pattern="^(([0-9]+\.[0-9]*)|([0-9]*\.[0-9]+)|([0-9]*))$" [formControl]="heightFormControl">
+        <mat-error *ngIf="heightFormControl.hasError('pattern')">
+          This is not valid number!
+        </mat-error>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
-        <input matInput #weight placeholder="Weight" >
+        <input matInput #weight placeholder="Weight" pattern="^(([0-9]+\.[0-9]*)|([0-9]*\.[0-9]+)|([0-9]*))$" [formControl]="weightFormControl">
+        <mat-error *ngIf="weightFormControl.hasError('pattern')">
+          This is not valid number!
+        </mat-error>
       </mat-form-field>
     </div>
     <div>
@@ -27,6 +39,7 @@
   </div>
 
   <button mat-raised-button color="primary" routerLink="/pa165/monsters">Back</button>
-  <button mat-raised-button color="primary" (click)="createMonster(name.value, height.value, weight.value, agility)">Create monster</button>
+  <button mat-raised-button color="primary" [disabled]="!nameFormControl.valid || !heightFormControl.valid || !weightFormControl.valid"
+          (click)="createMonster(name.value, height.value, weight.value, agility)">Create monster</button>
 
 </mat-card>
