--- a/creatures-hunting-angular/src/app/manager/weapon-create/weapon-create.component.html
+++ b/creatures-hunting-angular/src/app/manager/weapon-create/weapon-create.component.html
@@ -1,7 +1,13 @@
 <mat-card class="main-card mat-elevation-z4" >
   <div>
     <mat-form-field>
-      <input matInput #name  placeholder="Name" >
+      <input matInput #name  placeholder="Name" required pattern="^[a-zA-Z]+$" [formControl]="nameFormControl">
+      <mat-error *ngIf="nameFormControl.hasError('pattern') && !nameFormControl.hasError('required')">
+        This is not valid name!
+      </mat-error>
+      <mat-error *ngIf="nameFormControl.hasError('required')">
+        Name is required!
+      </mat-error>
     </mat-form-field>
   </div>
   <div>
@@ -18,17 +24,24 @@
 
   <div>
     <mat-form-field>
-      <input matInput #range placeholder="Range" >
+      <input matInput #range placeholder="Range" pattern="^[0-9]*$" [formControl]="rangeFormControl">
+      <mat-error *ngIf="rangeFormControl.hasError('pattern')">
+        This is not valid number!
+      </mat-error>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field>
-      <input matInput #magazineCapacity placeholder="Magazine Capacity" >
+      <input matInput #magazineCapacity placeholder="Magazine Capacity" pattern="^[0-9]*$" [formControl]="magazineFormControl">
+      <mat-error *ngIf="magazineFormControl.hasError('pattern')">
+        This is not valid number!
+      </mat-error>
     </mat-form-field>
   </div>
 
   <button mat-raised-button color="primary" routerLink="/pa165/weapons">Back</button>
-  <button mat-raised-button color="primary" (click)="createWeapon(name.value, type, range.value,magazineCapacity.value)">Create</button>
+  <button mat-raised-button color="primary" [disabled]="!nameFormControl.valid || !rangeFormControl.valid || !magazineFormControl.valid"
+          (click)="createWeapon(name.value, type, range.value,magazineCapacity.value)">Create</button>
 
 
 </mat-card>
