--- a/creatures-hunting-angular/src/app/manager/monster-detail/monster-detail.component.html
+++ b/creatures-hunting-angular/src/app/manager/monster-detail/monster-detail.component.html
@@ -26,7 +26,7 @@
     </div>
     <div>
       <mat-form-field>
-        <input matInput #weight placeholder="Weight" value="{{monster.weight}}" disabled="{{!isAdmin}}"
+        <input disabled="{{!isAdmin}}" matInput #weight placeholder="Weight" value="{{monster.weight}}"
                pattern="^(([0-9]+\.[0-9]*)|([0-9]*\.[0-9]+)|([0-9]*))$" [formControl]="weightFormControl">
         <mat-error *ngIf="weightFormControl.hasError('pattern')">
           This is not valid number!
