--- a/creatures-hunting-angular/src/app/manager/monster-detail/monster-detail.component.html
+++ b/creatures-hunting-angular/src/app/manager/monster-detail/monster-detail.component.html
@@ -5,7 +5,7 @@
   <div>
     <div>
       <mat-form-field>
-        <input matInput #name placeholder="Name" value="{{monster.name}}" disabled="{{!isAdmin}}"
+        <input matInput #name placeholder="Name" value="{{monster.name}}"
                pattern="^[a-zA-Z]+$" [formControl]="nameFormControl">
         <mat-error *ngIf="nameFormControl.hasError('pattern') && !nameFormControl.hasError('required') && nameFormControl.dirty">
           This is not valid name!
@@ -17,7 +17,7 @@
     </div>
     <div>
       <mat-form-field>
-        <input matInput #height placeholder="Height" value="{{monster.height}}" disabled="{{!isAdmin}}"
+        <input matInput #height placeholder="Height" value="{{monster.height}}"
                pattern="^(([0-9]+\.[0-9]*)|([0-9]*\.[0-9]+)|([0-9]*))$" [formControl]="heightFormControl">
         <mat-error *ngIf="heightFormControl.hasError('pattern')">
           This is not valid number!
